--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ sourceCompatibility = targetCompatibility = 8
 
 repositories { 
 	mavenCentral()
+	maven {
+		url 'https://maven.fabricmc.net/'
+	}
+	maven {
+		url 'https://oss.sonatype.org/content/repositories/snapshots/'
+	}
 }
 
 configurations.shadow.extendsFrom configurations.compile
@@ -19,8 +25,14 @@ configurations.shadow.extendsFrom configurations.compile
 dependencies {
 	compile 'com.grack:nanojson:1.6'
 	compile 'org.ow2.asm:asm:9.0'
-	compile project('tiny-mappings-parser')
-	compile project('SrgUtils')
+	compile 'org.ow2.asm:asm-tree:9.0'
+	compile 'org.ow2.asm:asm-commons:9.0'
+	
+	compile 'org.cadixdev:lorenz:0.5.6'
+	compile 'org.cadixdev:lorenz-asm:0.5.6'
+	compile 'net.fabricmc:lorenz-tiny:3.0.0'
+	
+	compile 'org.cadixdev:atlas:0.3.0-SNAPSHOT'
 }
 
 jar {
